Ensure the image doesn't overflow the grid column by giving it 100% width

--- a/styles.css
+++ b/styles.css
@@ -28,3 +28,11 @@ main {
     grid-area: info;
 }
 
+.image__picture, .image__img {
+    width: 100%;
+}
+
+/* MODULES */
+img {
+    display: block;
+}
